--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
 						<div class="profile-img"><img src="images/me.png" alt=""></div>
-						<h2><b>Đang Nguyen Thai Hoa</b></h2>
+						<h2><b>Dang Nguyen Thai Hoa</b></h2>
 						<h4 class="font-yellow">Back-end Developer</h4>
 						<ul class="information margin-tb-30">
 							<li><b>BIRTH : </b>07-11-1997</li>
